--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
           mkdir -p dist && \
           for dir in src/*/; do
             zip -r "dist/$(basename "$dir").zip" "$dir" >/dev/null && \
-            jq "{\"$(basename "$dir")\": .}" "$dir/meta.json"
+            jq ". += {name: \"$(basename "$dir")\"}" "$dir/meta.json"
           done | \
-          jq add -sc > dist/templates.json
+          jq -sc > dist/templates.json
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
