--- a/src/foot/src.ini
+++ b/src/foot/src.ini
@@ -2,9 +2,9 @@
 font={{ t.monospace }}:size={{ t.size }}
 
 [colors]
-background={{ c.base }}
-foreground={{ c.text }}
-regular0={{ c.surface }}
+background={{ c.base    }}
+foreground={{ c.text    }}
+regular0={{ c.container }}
 regular1={{ c.red     }}
 regular2={{ c.green   }}
 regular3={{ c.yellow  }}
@@ -12,11 +12,11 @@ regular4={{ c.blue    }}
 regular5={{ c.purple  }}
 regular6={{ c.cyan    }}
 regular7={{ c.text    }}
-bright0={{ c.surface | smartLighten 10% }}
-bright1={{ c.red     | smartLighten 10% }}
-bright2={{ c.green   | smartLighten 10% }}
-bright3={{ c.yellow  | smartLighten 10% }}
-bright4={{ c.blue    | smartLighten 10% }}
-bright5={{ c.purple  | smartLighten 10% }}
-bright6={{ c.cyan    | smartLighten 10% }}
-bright7={{ c.text    | smartLighten 10% }}
+bright0={{ c.container | smartLighten 10% }}
+bright1={{ c.red       | smartLighten 10% }}
+bright2={{ c.green     | smartLighten 10% }}
+bright3={{ c.yellow    | smartLighten 10% }}
+bright4={{ c.blue      | smartLighten 10% }}
+bright5={{ c.purple    | smartLighten 10% }}
+bright6={{ c.cyan      | smartLighten 10% }}
+bright7={{ c.text      | smartLighten 10% }}
