--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,12 @@ jobs:
           mkdir -p dist/previews && \
           for dir in src/*/; do
             pushd $dir >/dev/null && \
-            cp "preview.webp" "../../dist/previews/$(basename "$dir").webp" && \
+            mv preview.webp "../../dist/previews/$(basename "$dir").webp" && \
+            jq -c ". += {name: \"$(basename "$dir")\"}" meta.json >meta.json.1 && \
+            mv -f meta.json.1 meta.json && \
             zip -x "preview.webp" -r "../../dist/$(basename "$dir").zip" . >/dev/null && \
             popd >/dev/null && \
-            jq ". += {name: \"$(basename "$dir")\"}" "$dir/meta.json"
+            cat "$dir/meta.json"
           done | \
           jq -sc > dist/templates.json
       - name: Upload artifact
