feat: init vscode

--- a/src/foot/src.ini
+++ b/src/foot/src.ini
@@ -1,19 +1,21 @@
 [colors]
-background={{ c.base    }}
-foreground={{ c.text    }}
-regular0={{ c.container }}
-regular1={{ c.red     }}
-regular2={{ c.green   }}
-regular3={{ c.yellow  }}
-regular4={{ c.blue    }}
-regular5={{ c.purple  }}
-regular6={{ c.cyan    }}
-regular7={{ c.text    }}
-bright0={{ c.container | smartLighten 0.1 }}
-bright1={{ c.red       | smartLighten 0.1 }}
-bright2={{ c.green     | smartLighten 0.1 }}
-bright3={{ c.yellow    | smartLighten 0.1 }}
-bright4={{ c.blue      | smartLighten 0.1 }}
-bright5={{ c.purple    | smartLighten 0.1 }}
-bright6={{ c.cyan      | smartLighten 0.1 }}
-bright7={{ c.text      | smartLighten 0.1 }}
+background={{ base }}
+foreground={{ text }}
+
+regular0={{ container }}
+regular1={{ red       }}
+regular2={{ green     }}
+regular3={{ yellow    }}
+regular4={{ blue      }}
+regular5={{ purple    }}
+regular6={{ cyan      }}
+regular7={{ text      }}
+
+bright0={{ container | smartLighten 0.5 }}
+bright1={{ red       | smartLighten 0.5 }}
+bright2={{ green     | smartLighten 0.5 }}
+bright3={{ yellow    | smartLighten 0.5 }}
+bright4={{ blue      | smartLighten 0.5 }}
+bright5={{ purple    | smartLighten 0.5 }}
+bright6={{ cyan      | smartLighten 0.5 }}
+bright7={{ text      | smartLighten 0.5 }}
