--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           mkdir -p dist/previews && \
           for dir in src/*/; do
             pushd $dir >/dev/null && \
-            mv preview.webp "../../dist/previews/$(basename "$dir").webp" && \
+            mv preview.webp "../../dist/previews/$(basename "$dir").webp" >/dev/null || \
             jq -c ". += {name: \"$(basename "$dir")\"}" meta.json >meta.json.1 && \
             mv -f meta.json.1 meta.json && \
             zip -x "preview.webp" -r "../../dist/$(basename "$dir").zip" . >/dev/null && \
