--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,14 @@ jobs:
           mkdir -p dist/previews && \
           for dir in src/*/; do
             pushd $dir >/dev/null
-            mv preview.webp "../../dist/previews/$(basename "$dir").webp" >/dev/null
+            mv preview.webp "../../dist/previews/$(basename "$dir").webp" 2>/dev/null || true
             jq -c ". += {name: \"$(basename "$dir")\"}" meta.json >meta.json.1 && \
             mv -f meta.json.1 meta.json && \
             zip -x "preview.webp" -r "../../dist/$(basename "$dir").zip" . >/dev/null
             popd >/dev/null
             cat "$dir/meta.json"
-          done | \
-          jq -sc > dist/templates.json
+          done # | \
+          # jq -sc > dist/templates.json
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
